--- a/shadowrocket-inside-ru.conf
+++ b/shadowrocket-inside-ru.conf
@@ -12,7 +12,7 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.
 # Исключение диапазонов для обхода
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 # ДНС сервера, по-умолчанию системный
-dns-server = system, 45.11.45.11, 9.9.9.9, 223.5.5.5, 1.1.1.1, 8.8.8.8
+dns-server = https://cloudflare-dns.com/dns-query, https://doh.dns.sb/dns-query, https://dns.yandex.ru/dns-query
 # Адрес обновления конфига
 # update-url = https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuration-file/main/template-ios-ru.conf interval=60 strict=true
 
