--- a/shadowrocket-inside-ru-reverse.conf
+++ b/shadowrocket-inside-ru-reverse.conf
@@ -14,7 +14,7 @@ dns-server = https://cloudflare-dns.com/dns-query, https://doh.dns.sb/dns-query,
 RULE-SET,https://raw.githubusercontent.com/itdoginfo/allow-domains/main/Russia/outside-clashx.lst,DIRECT
 DOMAIN-SUFFIX,ru,DIRECT
 DOMAIN-SUFFIX,рф,DIRECT
-DOMAIN-SUFFIX,дети,DIRECT
+DOMAIN-SUFFIX,xn--p1ai,DIRECT
 
 GEOIP,RU,DIRECT
 FINAL,PROXY
