--- a/shadowrocket-inside-ru-reverse.conf
+++ b/shadowrocket-inside-ru-reverse.conf
@@ -1,17 +1,17 @@
-# NAME: Template iOS non Russia
-# AUTHOR: Misha Tugushev
-# REPO: https://github.com/misha-tgshv/shadowrocket-configuration-file
-# UPDATED: 2023-06-19 19:48:00
+# NAME: Template iOS
+# AUTHOR: Barbara
+# REPO: https://github.com/go-barbara-go/shadowrocket-configuration-file
+# UPDATED: 2024-09-27 00:00:00
 
 [General]
 bypass-system = true 
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 dns-server = https://cloudflare-dns.com/dns-query, https://doh.dns.sb/dns-query, https://dns.yandex.ru/dns-query
-# update-url = https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuration-file/main/template-ios-non-ru.conf
+update-url = https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/shadowrocket-inside-ru-reverse.conf
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/itdoginfo/allow-domains/main/Russia/outside-clashx.lst,DIRECT
+RULE-SET,https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/clashx-ru.lst,DIRECT
 DOMAIN-SUFFIX,ru,DIRECT
 
 GEOIP,RU,DIRECT
@@ -21,4 +21,3 @@ FINAL,PROXY
 localhost = 127.0.0.1
 
 [URL Rewrite]
-^http://(www.)?yandex.ru https://www.ya.ru 302
