--- a/shadowrocket-inside-ru-reverse.conf
+++ b/shadowrocket-inside-ru-reverse.conf
@@ -13,6 +13,7 @@ update-url = https://raw.githubusercontent.com/go-barbara-go/shadowrocket-config
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/clashx-ru.lst,DIRECT
 DOMAIN-SUFFIX,ru,DIRECT
+DOMAIN-SUFFIX,рф,DIRECT
 
 GEOIP,RU,DIRECT
 FINAL,PROXY
