--- a/shadowrocket-direct-ru.conf
+++ b/shadowrocket-direct-ru.conf
@@ -1,6 +1,7 @@
 # NAME: Template iOS
 # AUTHOR: Barbara
 # REPO: https://github.com/go-barbara-go/shadowrocket-configuration-file
+# Deeplink: shadowrocket://config/add/https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/shadowrocket-direct-ru.conf
 # UPDATED: 2024-09-27 00:00:00
 
 [General]
@@ -8,7 +9,7 @@ bypass-system = true
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 dns-server = https://cloudflare-dns.com/dns-query, https://doh.dns.sb/dns-query, https://dns.yandex.ru/dns-query
-update-url = https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/shadowrocket-inside-ru-reverse.conf
+update-url = https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/shadowrocket-direct-ru.conf
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/clashx-ru.lst,DIRECT
