--- a/shadowrocket-direct-ru.conf
+++ b/shadowrocket-direct-ru.conf
@@ -20,5 +20,7 @@ DOMAIN-SUFFIX,рф,DIRECT
 GEOIP,RU,DIRECT
 FINAL,PROXY
 
+geoip-url = https://git.io/GeoLite2-Country.mmdb
+
 [Host]
 localhost = 127.0.0.1
