--- a/shadowrocket-direct-ru.conf
+++ b/shadowrocket-direct-ru.conf
@@ -16,6 +16,7 @@ update-url = https://raw.githubusercontent.com/go-barbara-go/shadowrocket-config
 RULE-SET,https://raw.githubusercontent.com/go-barbara-go/shadowrocket-configuration-file/refs/heads/main/clashx-ru.lst,DIRECT
 DOMAIN-SUFFIX,ru,DIRECT
 DOMAIN-SUFFIX,рф,DIRECT
+DOMAIN-SUFFIX,xn--p1ai,DIRECT
 
 GEOIP,RU,DIRECT
 FINAL,PROXY
